src/App.css
:root {
  --navy: #0C2B47;
  --lime: #DAF743;
  --purple: #966B9D;
  --lilac: #E8D7EA;
  --white: #F5F3EF;
  --gray: #DEDCD9;

}

body {
  background-color: var(--white);
  font-family: 'MonteBold';
  color: var(--navy);
  /* width: 480px; */
}


h1 {
  font-family: 'TropiLand';
  font-size: 34px;
  letter-spacing: 1.5px;
  text-align: center;
}

h1.hero {
  font-size: 48px;
  letter-spacing: 1.5px;
  text-align: left;
  margin: 0px;
}

h1.small {
  font-family: 'TropiLand';
  font-size: 28px;
  letter-spacing: 1px;
  text-align: center;
}

h2 {
  font-family: 'MonteSemi';
  font-size: 22px;
  letter-spacing: .5px;
}


h3 {
  font-family: 'Monte';
  font-size: 20px;
  letter-spacing: .5px;
}

label {
  font-family: 'MonteSemi';
  font-size: 14px;
  letter-spacing: .5px;
  color: var(--navy);
}

input {
  font-family: 'MonteSemi';
  font-size: 14px;
  letter-spacing: .5px;
  color: var(--navy);
}

:placeholder-shown {
  font-family: 'MonteSemi';
  font-size: 14px;
  letter-spacing: .5px;
}

p {
  font-family: 'Monte';
  font-size: 18px;
  letter-spacing: .5px;
}

p.bold{
  font-family: 'MonteBold';
  font-size: 14px;
}
/* INTRO */
.SK-icon {
  max-width: 15%; 
  position: absolute; 
  top: 40px; 
  right: 50px; 
}

.background-flower {
  position: absolute; 
  top: -100px;
  left: -100px; 
  z-index: -1; 
  width: 120%;
}

/* NAVIGATION */
.navigation-container {
  display: flex;
  gap: 12px;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.navigation-button {
  padding: 15px;
  border: 2.5px solid var(--navy);
  border-radius: 40px;
  text-align: center;
  cursor: pointer; 
  transition: all 0.3s ease; 
  width: 138px;
  background-color: var(--white);
}

.navigation-button:hover {
  background-color: var(--lime); 
}

.navigation-button a,
.navigation-button a:visited {
  text-decoration: none;
  color: inherit; 
}


/* SKILLS */

.skills-container{
  display: flex;
  gap: 36px;
  align-items: center;
  justify-content: center;
}

.skill-button{
  padding: 10px 10px 0px 10px;
  border: 2.5px solid var(--navy);
  border-radius: 40px;
  text-align: center;
  cursor: pointer; 
  transition: all 0.3s ease; 
  width: 100px;
  color: var(--navy);
  background-color: var(--lime); 
}


.skill-button:hover {
  background-color: var(--lilac); 
}

.skill-button a,
.skill-button a:visited {
  text-decoration: none;
  color: inherit; 
}

.skill-icon{
  height: 36px;
}

/* SKILLS POPUP */
.skills-popup {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -100%);
  width: 80%;
  height: 40%;
  background-color: var(--lilac);
  justify-content: center;
  align-items: center;
  z-index: 1000;
  border: solid;
  border-width: 2.5px;
  border-color: var(--navy);
  border-radius: 40px;
  overflow: auto;
}

.popup-content {
  padding: 40px;
  border-radius: 10px;
  text-align: center;
  position: relative;
}

.close-button {
  position: absolute;
  top: 20px;
  right: 20px;
  background: none;
  border: none;
  font-size: 1.2rem;
  cursor: pointer;
  color: var(--lime);
  background-color: var(--navy);
  border-radius: 40px;
  padding: 5px 10px;
}
/* ABOUT ME */

.header{
  display: flex;
  gap: 10px;
  justify-content: center;
}

/* WORK SNIP */
.work{
  background-color: var(--gray);
  padding: 30px;
}

.work-container{
  padding: 30px 0px;
  display: flex;
  justify-content: center;
  gap: 10%;
}

.work-button{
  padding: 30px 40px 20px 40px;
  border: 2.5px solid var(--navy);
  border-radius: 40px;
  text-align: center;
  cursor: pointer; 
  transition: all 0.3s ease; 
  color: var(--navy);
  background-color: var(--white); 
}

.work-button:hover {
  background-color: var(--lilac); 
}

.work-button a,
.work-button a:visited {
  text-decoration: none;
  color: inherit; 
}

/* CONTACT */
.contact-form {
  background-color: var(--gray);
  padding: 22px;
  border: solid;
  border-radius: 40px;
  border-width: 2.5px;
  border-color: var(--navy);
  max-width: 600px; 
  margin: 0 auto; 
  position: relative;
  min-height: 600px;
}

.email-form label {
  display: block;
  margin-bottom: 10px;
}

.email-form input,
.email-form textarea {
  width: 93%;
  padding: 10px;
  border: 2.5px solid var(--navy);
  border-radius: 40px;
  font-size: 16px;
  margin-bottom: 15px;
  display: block;
}

.email-form textarea {
  resize: vertical; 
}

.email-form button {
  background-color: var(--navy);
  width: 100%;
  color: var(--lime);
  border: none;
  padding: 10px 20px;
  border-radius: 40px;
  cursor: pointer;
  font-size: 16px;
  border: solid;
  border-color: var(--navy);
  border-width: 2.5px;
  margin: 30px 0px 30px 0px;
}

.email-form button:hover {
  background-color: var(--lime);
  color: var(--navy);
  border: solid;
  border-color: var(--navy);
  border-width: 2.5px;
}

.form-input {
  padding-top: 10px;
}

.confirmation-message {
  padding: 20px;
  border-radius: 10px;
  text-align: center;
  margin-top: 20px;
  width:100%;
  display: block;
}

/* Ornament positioning */
.ornament {
  position: absolute;
  width: 50px; 
  height: 50px; 
}

.top-left {
  top: -10px;
  left: -15px;
  transform: rotate(-180deg); 
}

.top-right {
  top: -12px;
  right: -12px;
  transform: rotate(-90deg); 
}

.bottom-left {
  bottom: -15px;
  left: -12px;
  transform: rotate(90deg); 
}

.bottom-right {
  bottom: -10px;
  right: -12px;
  transform: rotate(0deg); 
}

/* SIGNOFF */
.signoff-container{
  display: grid;
  place-items: center;
  padding: 50px;}
.sk{
  max-width: 30%;
}
/* FOOTER */
.footer {
  position: relative;
  width: 100%;
  padding-top: 60px; /* Add padding to ensure content doesn't overlap with the scallop image */
}

.footer-sections {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  padding: 20px;
  z-index: 1; 
  background-color: var(--lilac);
}

.footer-section {
  flex: 1 1 200px; 
  margin: 10px;
}

.scallop {
  position: absolute;
  /* top: -60%; for web */ 
  top: -30px;
  left: 0;
  width: 100%;
  height: auto;
  z-index: -1;
}

.bullet-list {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.bullet-list-item {
  display: flex;
  align-items: center;
}

.bullet-list-item img {
  margin-right: 10px;
}

.bullet-list-item a {
  text-decoration: none;
  color: var(--navy); 
}
/* SCROLLBAR STYLING */
::-webkit-scrollbar {
  width: 8px; /* Width of the scrollbar */
}

::-webkit-scrollbar-track {
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: var(--white);
  border-radius: 50px; 
}

::-webkit-scrollbar-thumb:hover {
  background: var(--navy); 
}

